# Interface_OTA

./: .gitignore  README.md  west.yml
dm-wolfmqtt-publisher-client-with-zephyr/: README.md  app.overlay  prj.conf
dm-wolfmqtt-publisher-client-with-zephyr/src/: aws_settings.h  main.c  user_settings.h
dm-wolfssh-rgb-server-with-zephyr/: README.md  prj.conf
dm-wolfssh-rgb-server-with-zephyr/src/: main.c
dm-wolfssl-ota-client-with-zephyr/: CMakeLists.txt  README.md  dm-wolfssl-ota-client-with-zephyr.xml  prj.conf
dm-wolfssl-ota-client-with-zephyr/fwserver/: CMakeLists.txt  fwserver.c  fwserver.h  mqttnet.c  mqttnet.h
dm-wolfssl-ota-client-with-zephyr/mqttBroker/: dockerfile
dm-wolfssl-ota-client-with-zephyr/mqttBroker/certs/: ca.crt  ca.key  ca.srl
dm-wolfssl-ota-client-with-zephyr/src/: main.c  user_settings.h
dm-wolfssl-ota-client-with-zephyr/src/mqttClient/: fwclient.h  mqttexample.c  mqttexample.h
dm-wolfssl-tls-hello-server-pqc-with-zephyr/: CMakeLists.txt  README.md  build-client.sh  client-tls13-filetransfer.c  prj.conf
dm-wolfssl-tls-hello-server-pqc-with-zephyr/src/: main.c  user_settings.h
dm-wolfssl-tls-hello-server-with-zephyr/: README.md  prj.conf
dm-wolfssl-tls-hello-server-with-zephyr/src/: main.c  user_settings.h
dm-wolftpm-wolfssl-tls-with-zephyr/: CMakeLists.txt  README.md  prj.conf
dm-wolftpm-wolfssl-tls-with-zephyr/deviceTreeOverlays/: mikroBUS.overlay
dm-wolftpm-wolfssl-tls-with-zephyr/src/: main.c  mikroBUS.c  user_settings.h  zephyr_compat.c  zephyr_compat.h
nxp-appcodehub/: west.yml
nxp-appcodehub/dm-wolfssl-ota-client-with-zephyr/: README.md  app.overlay  sample.yaml
nxp-appcodehub/dm-wolfssl-ota-client-with-zephyr/fwserver/: mqttexample.c  mqttport.c
nxp-appcodehub/dm-wolfssl-ota-client-with-zephyr/mqttBroker/certs/: server.crt  server.csr  server.key
nxp-appcodehub/dm-wolfssl-ota-client-with-zephyr/mqttBroker/config/: mosquitto.conf
nxp-appcodehub/dm-wolfssl-ota-client-with-zephyr/src/: main.c  system_init_ns.c  wolfboot_status.h
nxp-appcodehub/dm-wolfssl-ota-client-with-zephyr/src/mqttClient/: firmware.h  fwclient.c  mqttnet.c  mqttport.h
nxp-appcodehub/dm-wolfssl-ota-client-with-zephyr/wolfbootConfig/: .config  0001-Update-configs-and-memory-map.patch
wolfBoot-2.8.0/config/examples/: polarfire_mpfs250_qspi.config
